kubernetes/snipe-it.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snipe-deployment
  labels:
    app: snipe-it
spec:
  replicas: 1
  selector:
    matchLabels:
      app: snipe-it
  template:
    metadata:
      labels:
        app: snipe-it
    spec:
      containers:
      - name: snipe-it
        image: "snipe/snipe-it:v5.1.0"
        resources:
          limits:
            memory: 1Gi
            cpu: 1000m
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/lib/snipeit
          name: vol
      volumes:
      - name: vol
        persistentVolumeClaim:
          claimName: snipe-vol
---
apiVersion: v1
kind: Service
metadata:
  name: snipe-service
spec:
  selector:
    app: snipe-it
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: snipe-ingress
spec:
  rules:
    - host: inventory.ocf.berkeley.edu
      http:
        paths:
          - backend:
              serviceName: snipe-service
              servicePort: 80
    - host: inventory.dev-kubernetes.ocf.berkeley.edu
      http:
        paths:
          - backend:
              serviceName: snipe-service
              servicePort: 80
